--- a/index.html
+++ b/index.html
@@ -1009,11 +1009,12 @@
 
 <div class="col-12 col-lg-8">
 
-  <div class="alert alert-note">
+  <!-- <div class="alert alert-note">
   <div>
     Quickly discover relevant content by <a href="./publication/">filtering publications</a>.
   </div>
 </div>
+ -->
 
 
   
@@ -1029,13 +1030,14 @@
   <span class="article-metadata li-cite-author">
     
 
-  <span >
-      admin</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
-      Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
+  <span class="author-highlighted">
+      Jiawei Qin</span>, <span >
+      Takuru Shimoyama</span>, <span >
+      Yusuke Sugano</span>
   </span>
-  (2013).
-  <a href="/publication/example/">An example conference paper</a>.
-  In <em>ICW</em>.
+  (2022).
+  <a href="/publication/example/">Learning-by-Novel-View-Synthesis for Full-Face Appearance-Based Gaze Estimation</a>.
+  In <em>CVPRW</em>.
   
   <p>
 
